# AprilTagWarmup

./: README.md  runProgram_readme.md
apriltag_checkout_tag/: README.md
apriltag_checkout_tag/include/apriltag_checkout_tag/: apriltag_checkout_tag.h
apriltag_checkout_tag/lanuch/: slam.launch
apriltag_checkout_tag/src/: apriltag_checkout_tag.cpp
apriltag_localization/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
apriltag_localization/cfg/: tmcl.cfg
apriltag_localization/include/: tmcl.h
apriltag_localization/src/: tmcl.cpp  tmcl_node.cpp
apriltag_mapping/: CMakeLists.txt  package.xml
apriltag_mapping/include/apriltag_mapping/: apriltag_mapping.h
apriltag_mapping/include/isam/: Properties.h
apriltag_mapping/src/: apriltag_mapping.cpp
learn-resource/c++/: website.md
learn-resource/ros/: resource.md
pointgrey_camera_driver/: README.md
pointgrey_camera_driver/pointgrey_camera_driver/cfg/: PointGrey.cfg
pointgrey_camera_driver/pointgrey_camera_driver/launch/: camera.launch
src/apriltag_checkout_tag/: CMakeLists.txt  package.xml
src/apriltag_checkout_tag/include/apriltag_checkout_tag/: apriltag_checkout_tag.h
src/apriltag_checkout_tag/msg/: PoseStampedArray.msg
src/apriltag_localization/: CMakeLists.txt  package.xml
src/apriltag_mapping/: CMakeLists.txt  README.md
src/apriltag_mapping/src/: apriltag_mapping.cpp
src/pointgrey_camera_driver/pointgrey_camera_driver/: .CMakeLists.txt.swp  CMakeLists.txt
src/pointgrey_camera_driver/pointgrey_camera_driver/launch/: camera.launch
src/vrpn_client_ros/include/vrpn_client_ros/: pose2path.h
vrpn_client_ros/: CMakeLists.txt  package.xml
vrpn_client_ros/launch/: qfy_sample.launch
vrpn_client_ros/src/: vrpn_client_node.cpp  vrpn_client_ros.cpp
